--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Blog</title>
   <link rel="stylesheet" href="/blog-site/styles/style.css" />
+  <base href="/feb-2025-final-project-and-deployment-AndiswaCyria/">
+
 </head>
 <body>
   <header class="main-header">
