--- a/blog-site/about.html
+++ b/blog-site/about.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About - My Blog</title>
-  <link rel="stylesheet" href="/blog-site/styles/style.css" />
+  <link rel="stylesheet" href="./blog-site/styles/style.css" />
 </head>
 <body>
   <header class="main-header">
     <nav>
       <ul>
-        <li><a href="/blog-site/index.html">Home</a></li>
-        <li><a href="/blog-site/blog.html">Blog</a></li>
-        <li><a href="/blog-site/about.html">About</a></li>
-        <li><a href="/blog-site/contact.html">Contact</a></li>
+        <li><a href="./blog-site/index.html">Home</a></li>
+        <li><a href="./blog-site/blog.html">Blog</a></li>
+        <li><a href="./blog-site/about.html">About</a></li>
+        <li><a href="./blog-site/contact.html">Contact</a></li>
         <li><button id="theme-toggle">🌙</button></li>
       </ul>
     </nav>
@@ -24,7 +24,7 @@
 
   <main>
     <section class="about-section">
-      <img src="images/author.jpg" alt="Author" style="max-width: 200px; border-radius: 10px;" />
+      <img src="./images/author.jpg" alt="Author" style="max-width: 200px; border-radius: 10px;" />
       <h2>Hello, I'm the creator of this blog!</h2>
       <p>I share my journey learning web development, designing websites, and exploring tech trends. Thanks for visiting!</p>
     </section>
@@ -34,6 +34,6 @@
     <p>&copy; 2025 My Blog</p>
   </footer>
 
-  <script src="/blog-site/scripts/script.js"></script>
+  <script src="./blog-site/scripts/script.js"></script>
 </body>
 </html>
