--- a/blog-site/blog.html
+++ b/blog-site/blog.html
@@ -10,10 +10,10 @@
   <header class="main-header">
     <nav>
       <ul>
-        <li><a href="/blog-site/index.html">Home</a></li>
-        <li><a href="/blog-site/blog.html">Blog</a></li>
-        <li><a href="/blog-site/about.html">About</a></li>
-        <li><a href="/blog-site/contact.html">Contact</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><button id="theme-toggle">🌙</button></li>
       </ul>
     </nav>
