--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Blog</title>
-  <link rel="stylesheet" href="./blog-site/styles/style.css" />
+  <link rel="stylesheet" href="/blog-site/styles/style.css" />
   <base href="/feb-2025-final-project-and-deployment-AndiswaCyria/">
 
 </head>
@@ -12,10 +12,10 @@
   <header class="main-header">
     <nav>
       <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./blog-site/blog.html">Blog</a></li>
-        <li><a href="./blog-site/about.html">About</a></li>
-        <li><a href="./blog-site/contact.html">Contact</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/blog-site/blog.html">Blog</a></li>
+        <li><a href="/blog-site/about.html">About</a></li>
+        <li><a href="/blog-site/contact.html">Contact</a></li>
         <li><button id="theme-toggle">🌙</button></li>
       </ul>
     </nav>
