--- a/blog-site/contact.html
+++ b/blog-site/contact.html
@@ -10,10 +10,10 @@
   <header class="main-header">
     <nav>
       <ul>
-        <li><a href="./index.html">Home</a></li>
-        <li><a href="./blog-site/blog.html">Blog</a></li>
-        <li><a href="./blog-site/about.html">About</a></li>
-        <li><a href="./blog-site/contact.html">Contact</a></li>
+        <li><a href="PLP-WebTechnologies/feb-2025-final-project-and-deployment-AndiswaCyria/index.html">Home</a></li>
+        <li><a href="PLP-WebTechnologies/feb-2025-final-project-and-deployment-AndiswaCyria/blog-site/blog.html">Blog</a></li>
+        <li><a href="PLP-WebTechnologies/feb-2025-final-project-and-deployment-AndiswaCyria/blog-site/about.html">About</a></li>
+        <li><a href="blog-site/contact.html">Contact</a></li>
         <li><button id="theme-toggle">🌙</button></li>
       </ul>
     </nav>
