--- a/blog-site/contact.html
+++ b/blog-site/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact - My Blog</title>
-  <link rel="stylesheet" href="./blog-site/styles/style.css" />
+  <link rel="stylesheet" href="PLP-WebTechnologies/feb-2025-final-project-and-deployment-AndiswaCyria/blog-site/styles/style.css" />
 </head>
 <body>
   <header class="main-header">
@@ -41,6 +41,6 @@
     <p>&copy; 2025 My Blog</p>
   </footer>
 
-  <script src="./blog-site/scripts/script.js"></script>
+  <script src="PLP-WebTechnologies/feb-2025-final-project-and-deployment-AndiswaCyria/blog-site/scripts/script.js"></script>
 </body>
 </html>
