--- a/blog-site/contact.html
+++ b/blog-site/contact.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact - My Blog</title>
-  <link rel="stylesheet" href="./PLP-WebTechnologies/feb-2025-final-project-and-deployment-AndiswaCyria/blog-site/styles/style.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
 </head>
 <body>
   <header class="main-header">
     <nav>
       <ul>
-        <li><a href="PLP-WebTechnologies/feb-2025-final-project-and-deployment-AndiswaCyria/index.html">Home</a></li>
-        <li><a href="PLP-WebTechnologies/feb-2025-final-project-and-deployment-AndiswaCyria/blog-site/blog.html">Blog</a></li>
-        <li><a href="PLP-WebTechnologies/feb-2025-final-project-and-deployment-AndiswaCyria/blog-site/about.html">About</a></li>
-        <li><a href="blog-site/contact.html">Contact</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./blog.html">Blog</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="./blog-site/contact.html">Contact</a></li>
         <li><button id="theme-toggle">🌙</button></li>
       </ul>
     </nav>
@@ -41,6 +41,6 @@
     <p>&copy; 2025 My Blog</p>
   </footer>
 
-  <script src="PLP-WebTechnologies/feb-2025-final-project-and-deployment-AndiswaCyria/blog-site/scripts/script.js"></script>
+  <script src="./scripts/script.js"></script>
 </body>
 </html>
