--- a/blog-site/blog.html
+++ b/blog-site/blog.html
@@ -10,7 +10,7 @@
   <header class="main-header">
     <nav>
       <ul>
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./blog.html">Blog</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./contact.html">Contact</a></li>
