--- a/blog-site/contact.html
+++ b/blog-site/contact.html
@@ -23,18 +23,13 @@
   </header>
 
   <main>
-    <form class="contact-form" action="#" method="POST" style="max-width: 600px; margin: 2rem auto;">
-      <label for="name">Name</label>
-      <input type="text" id="name" name="name" required />
+  <form action="https://formsubmit.co/YOUR_EMAIL@example.com" method="POST">
+  <input type="text" name="name" required placeholder="Your Name">
+  <input type="email" name="email" required placeholder="Your Email">
+  <textarea name="message" required placeholder="Your Message"></textarea>
+  <button type="submit">Send</button>
+</form>
 
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required />
-
-      <label for="message">Message</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
-
-      <button type="submit">Send Message</button>
-    </form>
   </main>
 
   <footer>
