--- a/blog-site/contact.html
+++ b/blog-site/contact.html
@@ -23,7 +23,7 @@
   </header>
 
   <main>
-  <form action="https://formsubmit.co/YOUR_EMAIL@example.com" method="POST">
+  <form action="https://formsubmit.co/andiswacyriam@gmail.com" method="POST">
   <input type="text" name="name" required placeholder="Your Name">
   <input type="email" name="email" required placeholder="Your Email">
   <textarea name="message" required placeholder="Your Message"></textarea>
