--- a/blog-site/about.html
+++ b/blog-site/about.html
@@ -10,7 +10,7 @@
   <header class="main-header">
     <nav>
       <ul>
-        <li><a href="./blog-site/index.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./blog-site/blog.html">Blog</a></li>
         <li><a href="./blog-site/about.html">About</a></li>
         <li><a href="./blog-site/contact.html">Contact</a></li>
