--- a/blog-site/blog.html
+++ b/blog-site/blog.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Blog - My Blog</title>
-  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="/blog-site/styles/style.css" />
 </head>
 <body>
   <header class="main-header">
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
-        <li><a href="./blog.html">Blog</a></li>
+        <li><a href="./blog-site/blog.html">Blog</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./contact.html">Contact</a></li>
         <li><button id="theme-toggle">🌙</button></li>
