--- a/blog-site/about.html
+++ b/blog-site/about.html
@@ -24,7 +24,7 @@
 
   <main>
     <section class="about-section">
-      <img src="/blog-site/images/author.jpeg" alt="Author" style="max-width: 200px; border-radius: 10px;" />
+      <img src="author.jpeg" alt="Author" style="max-width: 200px; border-radius: 10px;" />
       <h2>Hello, I'm the creator of this blog!</h2>
       <p>I share my journey learning web development, designing websites, and exploring tech trends. Thanks for visiting!</p>
     </section>
